Completed Day 8 Puzzle 2

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
 		"aoc-2023"
 	],
 	"author": "xHeitkamp(Robin Behlke)",
-	"license": "MIT"
+	"license": "MIT",
+	"dependencies": {
+		"compute-lcm": "^1.1.2"
+	}
 }
